fix: reader content display, add diagnostic to html validation
